[package]
name = "slogan"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
stderrlog = { version = "0.5" }
log = { version = "0.4" }
rust-ini = { version = "0.18" }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.27", features = ["serialize"]}
uuid = "1.2.2"
flate2 = { version="1.0", features = ["zlib-ng"], default-features = false }
